Minor wrapping and scrolling issues

--- a/src/app/work/work.component.scss
+++ b/src/app/work/work.component.scss
@@ -11,17 +11,16 @@ h1 {
 }
 
 .work-details {
-  display: flex;
   margin-bottom: 24px;
 
   h3 {
-    flex-grow: 1;
     font-size: 20px;
     font-weight: 400;
   }
 
   h4 {
-    font-size: 20px;
+    font-size: 18px;
+    font-style: italic;
     font-weight: 400;
   }
 }
